idf_component_register(
    SRCS 
        "main.cpp"
        "network/WifiCore.cpp"
        "network/WifiSTA.cpp"
        "network/WifiAP.cpp"
        "network/HTTPClient.cpp"
        "network/OTA.cpp"
        "storage/Storage.cpp"
        "ir/IRCommand.cpp"
        "ir/IRTransmitter.cpp"
        "ir/IRReceiver.cpp"
        "ir/IRReceiverIter.cpp"
        "ir/RMTChannel.cpp"
        "ir/LEDTransmitter.cpp"
        "portal/Portal.cpp"
        "utils/Utils.cpp"
        "utils/SNTPClient.cpp"
        "utils/SystemInitializer.cpp"
        "led/LedSequence.cpp"
        "led/LedManager.cpp"
        "alerts/AlertsManager.cpp"
        "alarm/AlarmController.cpp"
    INCLUDE_DIRS "." "core" "core/exceptions" "libs" "network" "storage" "ir" "portal" "utils" "config" "led" "alerts" "alarm"
)
